# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.html).

## [Unreleased]

## [0.4.1] - 2017-10-11

### Fixed
- Pinned versions of all dependencies in setup.py in response to [credstash#175](https://github.com/fugue/credstash/issues/175)

## [0.4.0] - 2017-08-21

### Added
- Adds multi-target casting. You can pass multiple files to be rendered in a single command now

### Fixed
- Compatibilty issues with Python 3

## [0.3.0] - 2017-07-17

### Added

- Exception message on lookup failures now includes the key ([#7](https://github.com/razorpay/alohomora/pull/7)).
- CodeDeploy mentions removed from README
- CHANGELOG.txt file added to release

## [0.2] - 2017-05-26

### Added
- botocore version dependency fixed.