@@ -98,3 +98,4 @@ ENV/
 /site
 test/files/birdie
 test/files/birdie2
+test/files/birdie_env
