@@ -6,6 +6,7 @@ The format is based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
 and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.html).
 
 ## [Unreleased]
+- Adds support for environment variables via `{{ENV['lookup']}}`. [#19](https://github.com/razorpay/alohomora/pull/19)
 
 ## [0.4.1] - 2017-10-11
 
